<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPCamBabyMonitor</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_select_camera">Choose Camera</string>
    <string name="choose_camera_condensed">Cameras</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hintLabel">Label</string>
    <string name="hintHost">Host</string>
    <string name="hintPort">Port</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="menuSave">Save</string>
    <string name="menuCancel">Cancel</string>
    <string name="warningEmptyFields">Not all fields have been filled in!</string>
    <string name="descImagestream">Your Baby!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="choose_action">Choose an action</string>
    <string name="Sound">LabelAudio</string>
    <string name="LabelAudio">Sound</string>
    <string name="LabelAudioOff">Audio Off</string>
    <string name="MaxConnections">Max Connections Reached</string>
    <string name="UnknownPassword">Password not valid</string>
    <string name="UnknownUser">User not valid</string>
    <string name="labelIR">IR</string>
    <string name="labelMic">Micro</string>
    <string name="title_activity_add_camera">Add Camera</string>
    <string name="unknownCameraType">Unknown Camera Type</string>
    
    <string name="notifyAlarm">ALARM</string>
    <string name="notifyNoAlarm">Monitor</string>
    <string name="notifyAudioAlarm">Baby is crying?</string>
    <string name="notifyMoveAlarm">Baby is moving?</string>
    <string name="notifyWatch">Watching</string>
   	<string name="notifyDisconnected">Not connected!</string>

    <!-- Strings related to Settings -->
	<string name="prefReceiveAlarm">Alarm Notification</string>
    <string name="prefBackgroundData">Audio in Background</string>
    
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Background Data</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    
    <!-- Settings for Remote Data -->
    <string name="pref_header_remote">Camera Settings</string>
    <string name="prefFlipVertical">Flip image vertically</string>
    <string name="prefFlipHorizontal">Flip image horizontally</string>
    
</resources>