<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/camera_info_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:hint="@string/hintLabel"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusDown="@+id/camera_info_host"
            android:nextFocusLeft="@id/camera_info_host"
            android:scrollHorizontally="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="24sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@id/camera_info_host"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:hint="@string/hintHost"
            android:lines="1"
            android:maxLines="1"
            android:nextFocusDown="@+id/camera_info_port"
            android:nextFocusForward="@id/camera_info_port"
            android:nextFocusLeft="@id/camera_info_label"
            android:nextFocusRight="@id/camera_info_port"
            android:nextFocusUp="@id/camera_info_label"
            android:scrollHorizontally="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="24sp" />

        <EditText
            android:id="@id/camera_info_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:hint="@string/hintPort"
            android:lines="1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/camera_info_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:hint="@string/hintUsername"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/camera_info_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="24sp" />
            
    </LinearLayout>
</ScrollView>
